fixed hidden page on tablets

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ code {
 }
 
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1280px) {
 
   body{
     display: none;
